--- a/Trafalgar/src/global.css
+++ b/Trafalgar/src/global.css
@@ -1,5 +1,7 @@
 :root {
     --h1-font-size: clamp(2rem, 1.5vw + 1.8rem, 3.5rem);
+    --h2-font-size: clamp(1.5rem, 1vw + 1rem, 2.5rem);
+    --h3-font-size: clamp(1rem, 1vw + .5rem, 2rem);
     --p-color: rgb(107, 107, 107);
 }
 
@@ -10,6 +12,10 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Jost", sans-serif;
+}
+
+html, body {
+    background: #fdfeff;
 }
 
 main {
