Fixed cursor on services on logo

--- a/Trafalgar/src/components/services.css
+++ b/Trafalgar/src/components/services.css
@@ -51,6 +51,7 @@
     background: white;
     box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.2);
     transition: transform 0.3s ease-in-out;
+    cursor: default;
 }
 
 .grid-items:hover {
