--- a/Trafalgar/src/components/services.css
+++ b/Trafalgar/src/components/services.css
@@ -14,6 +14,7 @@
     text-align: center;
     max-width: 1100px;
     gap: 1.5rem;
+    z-index: 1;
 }
 
 .services-text h2 {
@@ -30,11 +31,11 @@
 
 .grid-services-container {
     display: grid;
-    width: 85%;
-    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    width: 100%;
+    grid-template-columns: repeat(3, 1fr);
     place-items: center;
     gap: 50px;
-    margin-top: 50px;
+    margin: 50px 0;
     z-index: 1;
     padding: 20px;
 }
@@ -44,7 +45,8 @@
     flex-direction: column;
     justify-content: center;
     height: 354px;
-    width: 350px;
+    max-width: 350px;
+    min-width: 200px;
     padding: 30px;
     gap: 20px;
     border-radius: 10px;
@@ -71,11 +73,40 @@
 .services #bg-services {
     position: absolute;
     left: -300px;
-    z-index: 0;    
+    z-index: 0;
+    width: 100%;
 }
 
 .services #bg-services-dots {
     position: absolute;
     z-index: 0;
     right: -30px;
+}
+
+.more-services {
+    z-index: 1;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+@media (max-width: 1100px) {
+    .grid-services-container {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .grid-items {
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
+@media (max-width: 650px) {
+    .grid-services-container {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
