--- a/Trafalgar/src/components/card-right.css
+++ b/Trafalgar/src/components/card-right.css
@@ -1,5 +1,6 @@
-.left-card-container {
+.right-card-container {
     display: flex;
+    flex-direction: row-reverse;
     width: 100%;
     margin: 60px 0;
 }
@@ -17,11 +18,13 @@
     object-fit: cover;
 }
 
-.card-text-content {
+.right-card-text-content {
     width: 40%;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
+    padding-left: 40px;
 }
 
 .content-wrapper {
@@ -40,12 +43,12 @@
     background: black;
 }
 
-.card-text-content h2 {
+.right-card-text-content h2 {
     font-size: var(--h2-font-size);
 }
 
 @media (max-width: 900px) {
-    .left-card-container {
+    .right-card-container {
         width: 100%;
         display: flex;
         flex-direction: column;
@@ -58,12 +61,13 @@
         width: 90%;
     }
 
-    .card-text-content {
+    .right-card-text-content {
         width: 100%;
         display: flex;
         justify-content: center;
         align-items: center;
         text-align: center;
+        padding: 0;
     }
 
     .content-wrapper {
@@ -72,6 +76,5 @@
         justify-content: center;
         align-items: center;
         text-align: center;
-
     }
 }
